--- a/keymouse/style.css
+++ b/keymouse/style.css
@@ -20,7 +20,7 @@ body {
   background : linear-gradient(to bottom,#d8e8ebc0, #fff);
   clip-path : polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
   box-shadow: -6px 6px 6px 2px rgba(0,0,0,0.4);
-  animation : test2 2s infinite;
+  animation : test2 120s infinite;
 }
 
 .hover {
@@ -36,7 +36,10 @@ body {
   background : white;
   border-radius : 100px;
   border : 1px solid black;
+  transform : rotate(5deg);
+  animation : test 12s infinite;
 }
+
 
 .hoverMe::after {
   content : "";
@@ -51,8 +54,23 @@ body {
   left : 50%;
   transform : translate(-50%,-50%);
   z-index: 2;
+  animation : test2 12s infinite;
 }
 
+.hoverMe::after::after {
+  content : "";
+  display: inline-block;
+  height : 40%;
+  width : 40%;
+  border-radius : 100px;
+  background : white;
+
+  position : absolute;
+  top : 50%;
+  left : 50%;
+  transform : translate(-50%,-50%);
+  z-index: 3;
+}
 .nose {
   height : 20px;
   width : 20px;
@@ -60,6 +78,7 @@ body {
   background :black;
   margin : 0 50%;
   transform : translate(-50%,-50%);
+  animation : test 12s infinite;
 }
 .miam {
   position : relative;
@@ -70,8 +89,22 @@ body {
   background : black;
   /* clip-path: ellipse(50% 20% at 50% 50%); */
   clip-path: ellipse(25% 40% at 50% 50%);
+  animation : blah 12s infinite;
 }
 
+@keyframes blah {
+  0% {
+  }
+  50% {
+    clip-path: ellipse(50% 20% at 50% 50%);
+    transform: translateY(10px);
+  }
+
+  100% {
+    clip-path: ellipse(25% 40% at 50% 50%);
+    transform : translateY(0px);
+  }
+}
 .miam::after {
   content : "";
   display: inline-block;
@@ -92,7 +125,7 @@ body {
   width : auto;
   clip-path : polygon(0% 0%, 85% 0%, 100% 100%, 15% 100%);
   background : linear-gradient(to top,#d8e8ebc0, #fff);
-  animation : test 2s infinite;
+  animation : test 120s infinite;
 }
 
 @keyframes test {
@@ -101,6 +134,7 @@ body {
   }
   50% {
     clip-path : polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
+    transform : translateY(3px);
   }
   100% {
     clip-path : polygon(0% 0%, 85% 0%, 100% 100%, 15% 100%);
@@ -113,6 +147,7 @@ body {
   }
   50% {
     clip-path : polygon(0% 0%, 85% 0%, 100% 100%, 15% 100%);
+    transform : translateY(3px);
   }
   100% {
     clip-path : polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
@@ -123,6 +158,6 @@ body {
   width : auto;
   clip-path : polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
   background : linear-gradient(to bottom,#d8e8ebc0, #fff);
-  animation : test2 2s infinite;
+  animation : test2 120s infinite;
 }
 
