--- a/vanilla/ex3/style.css
+++ b/vanilla/ex3/style.css
@@ -1,3 +1,8 @@
+body {
+  margin : 0;
+  padding : 0;
+}
+
 .main {
   text-align : center;
   padding-top : 100px;
@@ -29,16 +34,18 @@
   border : none;
   border-radius : 5px;
   padding : 2px 5px;
+  margin : 20px 50px;
   transition : ease-in 0.1s;
 }
 
  button:hover {
   background-color : black;
+  transform : scale(2.2) translateY(1px);
   color : white;
 }
 
  button:active {
-  transform : scale(2.5) translateY(1px);
+  transform : scale(1.9) translateY(1px);
 }
 
 /* Ex 2 */
@@ -53,5 +60,67 @@
 .sub2minus {
   display : inline-block;
   padding : 10px;
-  margin : 50px 5px 0 0;
+  margin : 50px 5px 50px 0;
+}
+
+.rectangle {
+  width : 200px;
+  height : 100px;
+  margin : 50px auto 50px auto;
+  background : black;
+  border-radius : 5px;
+  transition : ease-in 0.1s;
+}
+
+.grid {
+  display : grid;
+  grid-template-columns: auto 1000px auto;
+  margin : 0 auto 0 auto;
+}
+
+.area {
+  position : relative;
+  width : 1000px;
+  height : 500px;
+  background-color : rgba(97, 97, 97, 0.692);
+  z-index : 1;
+}
+
+.square {
+  position : absolute;
+  width : 50px;
+  height : 50px;
+  background-color : black;
+  border-radius : 5px;
+
+}
+
+.borderleft {
+  width : auto;
+  height : auto;
+  background : white;
+  z-index : 2;
+}
+
+.borderright {
+  width : auto;
+  height : auto;
+  background : white;
+  z-index : 2;  
+}
+
+.borderup {
+  position : relative;
+  height : 100px;
+  width : auto;
+  background : white;
+  z-index : 2;
+}
+
+.borderdown {
+  position : relative;
+  height : 100px;
+  width : auto;
+  background : white;
+  z-index : 2;  
 }
